# targetrecon

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
examples/: python_api_demo.ipynb
src/targetrecon/: __init__.py  agent.py  agent_chat.py  cli.py  core.py  mcp_server.py  models.py  report.py  resolver.py  ui_launcher.py  webapp.py
src/targetrecon/clients/: alphafold.py  bindingdb.py  chembl.py  http.py  opentargets.py  pdb_client.py  string_db.py  uniprot.py
src/targetrecon/static/: style.css
src/targetrecon/static/ketcher/: main.js
src/targetrecon/static/ketcher/binaryWasmNoRender/: indigoWorker-b347a411.js  indigoWorker-b347a411.js.map  main.js
src/targetrecon/static/ketcher/cjs/: main.js
src/targetrecon/static/ketcher2/static/js/: closable.f917306d.js  duo.a834e77e.js  main.39bce846.js  popup.d7c51bb9.js
