[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "targetrecon"
version = "0.1.0"
description = "Drug target intelligence aggregator — fetch, collate, and visualize public data for any protein target in one command."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Hemant Yadav" },
]
keywords = [
    "drug-discovery",
    "cheminformatics",
    "bioinformatics",
    "protein",
    "alphafold",
    "chembl",
    "pdb",
    "target-identification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "click>=8.1",
    "streamlit>=1.35",
    "pandas>=2.0",
    "rdkit>=2023.9.1",
    "anthropic>=0.30",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
targetrecon = "targetrecon.cli:main"

[project.urls]
Homepage = "https://github.com/hyadav/targetrecon"
Documentation = "https://github.com/hyadav/targetrecon#readme"
Repository = "https://github.com/hyadav/targetrecon"
Issues = "https://github.com/hyadav/targetrecon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/targetrecon"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
