[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "targetrecon"
version = "0.1.10"
description = "Drug target intelligence aggregator — fetch, collate, and visualize public data for any protein target in one command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hemant Nagar" },
]
keywords = [
    "drug-discovery",
    "cheminformatics",
    "bioinformatics",
    "protein",
    "alphafold",
    "chembl",
    "pdb",
    "target-identification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "click>=8.1",
    "streamlit>=1.35",
    "pandas>=2.0",
    "rdkit>=2023.9.1",
    "anthropic>=0.30",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
targetrecon = "targetrecon.cli:main"

[project.urls]
Homepage = "https://github.com/nagarh/targetrecon"
Documentation = "https://github.com/nagarh/targetrecon#readme"
Repository = "https://github.com/nagarh/targetrecon"
Issues = "https://github.com/nagarh/targetrecon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/targetrecon"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
targetrecon = ["static/**/*", "templates/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
